# nkf_rust

./: .editorconfig  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
src/: cli.rs  convert.rs  detect.rs  encoding_type.rs  error.rs  fold.rs  input_decode.rs  kana.rs  lib.rs  line_ending.rs  main.rs  mime.rs  pipeline.rs
src/tests/: cli_tests.rs  convert_tests.rs  detect_tests.rs  encoding_type_tests.rs  error_tests.rs  fold_tests.rs  input_decode_tests.rs  kana_tests.rs  line_ending_tests.rs  mime_tests.rs  pipeline_tests.rs
