[package]
name = "nkf_rust"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of nkf (Network Kanji Filter)"

[[bin]]
name = "nkf"
path = "src/main.rs"

[lib]
name = "nkf_rust"
path = "src/lib.rs"

[dependencies]
encoding_rs = "0.8"
chardetng = "0.1"
base64 = "0.22"

[dev-dependencies]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
